--- a/index.html
+++ b/index.html
@@ -19,16 +19,20 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h2>I'm a future web developer</h2>
     <hr>
     
-    <a href="./public/Movie-ranking-carlos.html">Movie Ranking</a>
+    <h3><a href="./public/Movie-ranking-carlos.html">Movie Ranking</a></h3>
     <img src="./assets/images/movies_carlos.png" alt="movie project" height="200">
     
-    <a href="./public/birtgday carlos.html">Birthday invite</a>
+    <h3><a href="./public/birtgday carlos.html">Birthday invite</a></h3>
     <img src="./assets/images/bday_carlos.png" alt="birthday project" height="200">
 
     <!-- TODO 7: Add the Contact Me and About Me page links -->
+    <hr>
     <a href="./public/contact.html">Contact me!</a>
     <br>
     <a href="./public/about.html">About me!</a>
+</body>
+</html>
+
 </body>
 </html>
 
